Localization full changes + bug fixes

--- a/frontend/src/data/locales/eng/translation.json
+++ b/frontend/src/data/locales/eng/translation.json
@@ -9,5 +9,61 @@
       "Education",
     "NPI": "NPI",
     "Approve": "Approve",
-    "Reject": "Reject"
+    "Reject": "Reject",
+    "show": "show",
+    "Dentist": "Dentist",
+    "Dermatologist": "Dermatologist",
+    "Dietitian": "Dietitian",
+    "Ear, Nose & Throat Doctor": "Ear, Nose & Throat Doctor",
+    "Emergency Medicine Physician": "Emergency Medicine Physician",
+    "Family Physician": "Family Physician",
+    "Hand Surgeon": "Hand Surgeon",
+    "Immunologist": "Immunologist",
+    "Bariatric Physician": "Bariatric Physician",
+    "Primary Care Doctor": "Primary Care Doctor",
+    "Allergist": "Allergist",
+    "Chiropractor": "Chiropractor",
+    "Physical Therapist": "Physical Therapist",
+    "Physician Assistant": "Physician Assistant",
+    "Plastic Surgeon": "Plastic Surgeon",
+    "Sports Medicine Specialist": "Sports Medicine Specialist",
+    "Infectious Disease Specialist": "Infectious Disease Specialist",
+    "Integrative Health Medicine Specialist": "Integrative Health Medicine Specialist",
+    "Internist": "Internist",
+    "Medical Ethicist": "Medical Ethicist",
+    "Microbiologist": "Microbiologist",
+    "Pain Management Specialist": "Pain Management Specialist",
+    "Anesthesiologist": "Anesthesiologist",
+    "Audiologist": "Audiologist",
+    "Cardiac Electrophysiologist": "Cardiac Electrophysiologist",
+    "Cardiologist": "Cardiologist",
+    "Cardiothoracic Surgeon": "Cardiothoracic Surgeon",
+    "Surgeon": "Surgeon",
+    "Johns Hopkins University": "Johns Hopkins University",
+    "Medical School - Chiang Mai University Faculty of Medicine, Doctor of Medicine": "Medical School - Chiang Mai University Faculty of Medicine, Doctor of Medicine",
+    "Icahn School of Medicine at Mount Sinai, James J. Peters Veterans Affairs Medical Center, Residency in Internal Medicine": "Icahn School of Medicine at Mount Sinai, James J. Peters Veterans Affairs Medical Center, Residency in Internal Medicine",
+    "Medical School - University of Texas, Southwestern, Doctor of Medicine": "Medical School - University of Texas, Southwestern, Doctor of Medicine",
+    "University of Texas, Houston (Residency)": "University of Texas, Houston (Residency)",
+    "State University of New York": "State University of New York",
+    "Medical School - Pandit Deendayal Upadhyay Medical College, Rajkot, Bachelor of Medicine, Bachelor of Surgery": "Medical School - Pandit Deendayal Upadhyay Medical College, Rajkot, Bachelor of Medicine, Bachelor of Surgery",
+    "The Brooklyn Hospital Center (Residency)": "The Brooklyn Hospital Center (Residency)",
+    "Cornell University (Internal Medicine)": "Cornell University (Internal Medicine)",
+    "Medical School - Midwestern University, Arizona College of Osteopathic Medicine, Doctor of Osteopathic Medicine": "Medical School - Midwestern University, Arizona College of Osteopathic Medicine, Doctor of Osteopathic Medicine",
+    "Drexel University, Master's in Biological Sciences": "Drexel University, Master's in Biological Sciences",
+    "University of California, Davis (Bachelor's)": "University of California, Davis (Bachelor's)",
+    "Medical School - Thanjavur Medical College, Bachelor of Medicine, Bachelor of Surgery": "Medical School - Thanjavur Medical College, Bachelor of Medicine, Bachelor of Surgery",
+    "Plaza Medical Center of Fort Worth, Residency in Family Medicine": "Plaza Medical Center of Fort Worth, Residency in Family Medicine",
+    "Dr.": "Dr.",
+    "Neha Patel": "Neha Patel",
+    "Frank Lloyd Wright": "Frank Lloyd Wright",
+    "Pilar Bescos": "Pilar Bescos",
+    "George Hernandez": "George Hernandez",
+    "Mathew Jerry": "Mathew Jerry",
+    "Tom Terry": "Tom Terry",
+    "Callie Sloan": "Callie Sloan",
+    "Raju Raghunath": "Raju Raghunath",
+    "Select Language": "Select Language",
+    "English": "English",
+    "Hindi": "Hindi",
+    "Doctor List": "Doctor List"
 }
