--- a/frontend/src/data/locales/hin/translation.json
+++ b/frontend/src/data/locales/hin/translation.json
@@ -9,5 +9,61 @@
       "शिक्षा",
     "NPI": "एन पी आई",
     "Approve": "मंजूर",
-    "Reject": "अस्वीकार"
+    "Reject": "अस्वीकार",
+    "show": "प्रदर्शन",
+    "Dentist": "दंत चिकित्सक",
+    "Dermatologist": "त्वचा विशेषज्ञ",
+    "Dietitian": "आहार विशेषज्ञ",
+    "Ear, Nose & Throat Doctor": "कान, नाक और गले के डॉक्टर",
+    "Emergency Medicine Physician": "आपातकालीन चिकित्सा चिकित्सक",
+    "Family Physician": "परिवार चिकित्सक",
+    "Hand Surgeon": "हाथ सर्जन",
+    "Immunologist": "प्रतिरक्षाविज्ञानी",
+    "Bariatric Physician": "बेरिएट्रिक फिजिशियन",
+    "Primary Care Doctor": "प्राथमिक देखभाल चिकित्सक",
+    "Allergist": "एलर्जी",
+    "Chiropractor": "हाड वैद्य",
+    "Physical Therapist": "भौतिक चिकित्सक",
+    "Physician Assistant": "सहायक चिकित्सक",
+    "Plastic Surgeon": "प्लास्टिक शल्यचिकित्सक",
+    "Sports Medicine Specialist": "खेल चिकित्सा विशेषज्ञ",
+    "Infectious Disease Specialist": "संक्रामक रोग विशेषज्ञ",
+    "Integrative Health Medicine Specialist": "एकीकृत स्वास्थ्य चिकित्सा विशेषज्ञ",
+    "Internist": "इंटरनिस्ट",
+    "Medical Ethicist": "मेडिकल एथिसिस्ट",
+    "Microbiologist": "जीवाणुतत्ववेत्त",
+    "Pain Management Specialist": "दर्द प्रबंधन विशेषज्ञ",
+    "Anesthesiologist": "निश्चेतना विशेषज्ञ",
+    "Audiologist": "ऑडियोलॉजिस्ट",
+    "Cardiac Electrophysiologist": "कार्डिएक इलेक्ट्रोफिजियोलॉजिस्ट",
+    "Cardiologist": "हृदय रोग विशेषज्ञ",
+    "Cardiothoracic Surgeon": "कार्डियोथोरेसिक सर्जन",
+    "Surgeon": "शल्य चिकित्सक",
+    "Johns Hopkins University": "जॉन्स हॉपकिन्स विश्वविद्यालय",
+    "Medical School - Chiang Mai University Faculty of Medicine, Doctor of Medicine": "मेडिकल स्कूल - चियांग माई यूनिवर्सिटी फैकल्टी ऑफ मेडिसिन, डॉक्टर ऑफ मेडिसिन",
+    "Icahn School of Medicine at Mount Sinai, James J. Peters Veterans Affairs Medical Center, Residency in Internal Medicine": "माउंट सिनाई में आइकान स्कूल ऑफ मेडिसिन, जेम्स जे। पीटर्स वेटरन्स अफेयर्स मेडिकल सेंटर, रेजीडेंसी इन इंटरनल मेडिसिन",
+    "Medical School - University of Texas, Southwestern, Doctor of Medicine": "मेडिकल स्कूल - यूनिवर्सिटी ऑफ टेक्सास, साउथवेस्टर्न, डॉक्टर ऑफ मेडिसिन",
+    "University of Texas, Houston (Residency)": "टेक्सास विश्वविद्यालय, ह्यूस्टन (रेजीडेंसी)",
+    "State University of New York": "स्टेट यूनिवर्सिटी ऑफ़ न्यू यॉर्क",
+    "Medical School - Pandit Deendayal Upadhyay Medical College, Rajkot, Bachelor of Medicine, Bachelor of Surgery": "मेडिकल स्कूल - पंडित दीनदयाल उपाध्याय मेडिकल कॉलेज, राजकोट, बैचलर ऑफ मेडिसिन, बैचलर ऑफ सर्जरी",
+    "The Brooklyn Hospital Center (Residency)": "ब्रुकलिन अस्पताल केंद्र (रेजीडेंसी)",
+    "Cornell University (Internal Medicine)": "कॉर्नेल विश्वविद्यालय (आंतरिक चिकित्सा)",
+    "Medical School - Midwestern University, Arizona College of Osteopathic Medicine, Doctor of Osteopathic Medicine": "मेडिकल स्कूल - मिडवेस्टर्न यूनिवर्सिटी, एरिज़ोना कॉलेज ऑफ़ ओस्टियोपैथिक मेडिसिन, डॉक्टर ऑफ़ ओस्टियोपैथिक मेडिसिन",
+    "Drexel University, Master's in Biological Sciences": "Drexel विश्वविद्यालय, जैविक विज्ञान में मास्टर",
+    "University of California, Davis (Bachelor's)": "कैलिफोर्निया विश्वविद्यालय, डेविस (स्नातक)",
+    "Medical School - Thanjavur Medical College, Bachelor of Medicine, Bachelor of Surgery": "मेडिकल स्कूल - तंजावुर मेडिकल कॉलेज, बैचलर ऑफ मेडिसिन, बैचलर ऑफ सर्जरी",
+    "Plaza Medical Center of Fort Worth, Residency in Family Medicine": "फोर्ट वर्थ का प्लाजा मेडिकल सेंटर, फैमिली मेडिसिन में रेजीडेंसी",
+    "Dr.": "डॉ",
+    "Neha Patel": "नेहा पटेल",
+    "Frank Lloyd Wright": "फ़्रैंक लॉएड राइट",
+    "Pilar Bescos": "पिलर बेस्कोस",
+    "George Hernandez": "जॉर्ज हर्नांडेज़",
+    "Mathew Jerry": "मैथ्यू जेरी",
+    "Tom Terry": "टॉम टेरी",
+    "Callie Sloan": "कैली स्लोन",
+    "Raju Raghunath": "राजू रघुनाथ",
+    "Select Language": "भाषा का चयन करें",
+    "English": "अंग्रेज़ी",
+    "Hindi": "हिंदी",
+    "Doctor List": "डॉक्टर सूची"
 }
