Localization changes for Spanish

--- a/frontend/src/data/locales/eng/translation.json
+++ b/frontend/src/data/locales/eng/translation.json
@@ -39,6 +39,15 @@
     "Cardiologist": "Cardiologist",
     "Cardiothoracic Surgeon": "Cardiothoracic Surgeon",
     "Surgeon": "Surgeon",
+    "Orthopedic Surgeon": "Orthopedic Surgeon",
+    "Endodontist": "Endodontist",
+    "Urgent Care Specialist": "Urgent Care Specialist",
+    "Acupuncturist": "Acupuncturist",
+    "Neurosurgeon": "Neurosurgeon",
+    "Nurse Practitioner": "Nurse Practitioner",
+    "Sleep Medicine Specialist": "Sleep Medicine Specialist",
+    "Urological Surgeon": "Urological Surgeon",
+    "Hematologist": "Hematologist",
     "Johns Hopkins University": "Johns Hopkins University",
     "Medical School - Chiang Mai University Faculty of Medicine, Doctor of Medicine": "Medical School - Chiang Mai University Faculty of Medicine, Doctor of Medicine",
     "Icahn School of Medicine at Mount Sinai, James J. Peters Veterans Affairs Medical Center, Residency in Internal Medicine": "Icahn School of Medicine at Mount Sinai, James J. Peters Veterans Affairs Medical Center, Residency in Internal Medicine",
@@ -53,6 +62,12 @@
     "University of California, Davis (Bachelor's)": "University of California, Davis (Bachelor's)",
     "Medical School - Thanjavur Medical College, Bachelor of Medicine, Bachelor of Surgery": "Medical School - Thanjavur Medical College, Bachelor of Medicine, Bachelor of Surgery",
     "Plaza Medical Center of Fort Worth, Residency in Family Medicine": "Plaza Medical Center of Fort Worth, Residency in Family Medicine",
+    "University of California, San Francisco, Residency in Pediatrics": "University of California, San Francisco, Residency in Pediatrics",
+    "Medical School - Universidad Complutense de Madrid Facultad de Medicina": "Medical School - Complutense University of Madrid Faculty of Medicine",
+    "Medical School - University of California, Irvine, Doctor of Medicine": "Medical School - University of California, Irvine, Doctor of Medicine",
+    "Medical School - Kakatiya Medical College, Bachelor of Medicine, Bachelor of Surgery": "Medical School - Kakatiya Medical College, Bachelor of Medicine, Bachelor of Surgery",
+    "Medical School - Indiana University, Doctor of Medicine": "Medical School - Indiana University, Doctor of Medicine",
+    "Loma Linda University Medical Center, Residency in Pediatrics": "Loma Linda University Medical Center, Residency in Pediatrics",
     "Dr.": "Dr.",
     "Neha Patel": "Neha Patel",
     "Frank Lloyd Wright": "Frank Lloyd Wright",
@@ -62,8 +77,15 @@
     "Tom Terry": "Tom Terry",
     "Callie Sloan": "Callie Sloan",
     "Raju Raghunath": "Raju Raghunath",
+    "Jack Owen": "Jack Owen",
+    "Harold Rogers": "Harold Rogers",
+    "Marlon Gray": "Marlon Gray",
+    "Vijaya Mummadi": "Vijaya Mummadi",
+    "Michael Chaing": "Michael Chaing",
+    "Christina Yang": "Christina Yang",
     "Select Language": "Select Language",
     "English": "English",
     "Hindi": "Hindi",
+    "Spanish": "Spanish",
     "Doctor List": "Doctor List"
 }
