--- a/frontend/src/data/locales/hin/translation.json
+++ b/frontend/src/data/locales/hin/translation.json
@@ -39,6 +39,15 @@
     "Cardiologist": "हृदय रोग विशेषज्ञ",
     "Cardiothoracic Surgeon": "कार्डियोथोरेसिक सर्जन",
     "Surgeon": "शल्य चिकित्सक",
+    "Orthopedic Surgeon": "हड्डियो का सर्जन",
+    "Endodontist": "एंडोडोंटिस्ट",
+    "Urgent Care Specialist": "तत्काल देखभाल विशेषज्ञ",
+    "Acupuncturist": "एक्यूपंक्चर",
+    "Neurosurgeon": "न्यूरोसर्जन",
+    "Nurse Practitioner": "नर्स व्यवसायी",
+    "Sleep Medicine Specialist": "स्लीप मेडिसिन स्पेशलिस्ट",
+    "Urological Surgeon": "यूरोलॉजिकल सर्जन",
+    "Hematologist": "रुधिर विशेषज्ञ",
     "Johns Hopkins University": "जॉन्स हॉपकिन्स विश्वविद्यालय",
     "Medical School - Chiang Mai University Faculty of Medicine, Doctor of Medicine": "मेडिकल स्कूल - चियांग माई यूनिवर्सिटी फैकल्टी ऑफ मेडिसिन, डॉक्टर ऑफ मेडिसिन",
     "Icahn School of Medicine at Mount Sinai, James J. Peters Veterans Affairs Medical Center, Residency in Internal Medicine": "माउंट सिनाई में आइकान स्कूल ऑफ मेडिसिन, जेम्स जे। पीटर्स वेटरन्स अफेयर्स मेडिकल सेंटर, रेजीडेंसी इन इंटरनल मेडिसिन",
@@ -53,6 +62,12 @@
     "University of California, Davis (Bachelor's)": "कैलिफोर्निया विश्वविद्यालय, डेविस (स्नातक)",
     "Medical School - Thanjavur Medical College, Bachelor of Medicine, Bachelor of Surgery": "मेडिकल स्कूल - तंजावुर मेडिकल कॉलेज, बैचलर ऑफ मेडिसिन, बैचलर ऑफ सर्जरी",
     "Plaza Medical Center of Fort Worth, Residency in Family Medicine": "फोर्ट वर्थ का प्लाजा मेडिकल सेंटर, फैमिली मेडिसिन में रेजीडेंसी",
+    "University of California, San Francisco, Residency in Pediatrics": "कैलिफोर्निया विश्वविद्यालय, सैन फ्रांसिस्को, बाल रोग में रेजीडेंसी",
+    "Medical School - Universidad Complutense de Madrid Facultad de Medicina": "मेडिकल स्कूल - मैड्रिड के कॉम्प्लुटेंस विश्वविद्यालय मेडिसिन के संकाय",
+    "Medical School - University of California, Irvine, Doctor of Medicine": "मेडिकल स्कूल - कैलिफोर्निया विश्वविद्यालय, इरविन, डॉक्टर ऑफ मेडिसिन",
+    "Medical School - Kakatiya Medical College, Bachelor of Medicine, Bachelor of Surgery": "मेडिकल स्कूल - काकतीय मेडिकल कॉलेज, बैचलर ऑफ मेडिसिन, बैचलर ऑफ सर्जरी",
+    "Medical School - Indiana University, Doctor of Medicine": "मेडिकल स्कूल - इंडियाना यूनिवर्सिटी, डॉक्टर ऑफ मेडिसिन",
+    "Loma Linda University Medical Center, Residency in Pediatrics": "लोमा लिंडा यूनिवर्सिटी मेडिकल सेंटर, रेजीडेंसी इन पीडियाट्रिक्स",
     "Dr.": "डॉ",
     "Neha Patel": "नेहा पटेल",
     "Frank Lloyd Wright": "फ़्रैंक लॉएड राइट",
@@ -62,8 +77,15 @@
     "Tom Terry": "टॉम टेरी",
     "Callie Sloan": "कैली स्लोन",
     "Raju Raghunath": "राजू रघुनाथ",
+    "Jack Owen": "जैक ओवेन",
+    "Harold Rogers": "हेरोल्ड रोजर्स",
+    "Marlon Gray": "मार्लन ग्रे",
+    "Vijaya Mummadi": "विजया मुम्मदी",
+    "Michael Chaing": "माइकल चिंग",
+    "Christina Yang": "क्रिस्टीना यांगो",
     "Select Language": "भाषा का चयन करें",
     "English": "अंग्रेज़ी",
     "Hindi": "हिंदी",
+    "Spanish": "स्पेनिश",
     "Doctor List": "डॉक्टर सूची"
 }
